--- a/public/css/pages/monitor.css
+++ b/public/css/pages/monitor.css
@@ -1,3 +1,7 @@
+body{
+  padding-top: 70px;
+}
+
 .page-content {
   padding: 20px 0;
 }
